--- a/estilo.css
+++ b/estilo.css
@@ -15,3 +15,19 @@ a {
 	font-weight: bold;
 	padding: 5px;
 }
+
+a:hover {
+	color: 	#4b566a;
+	background: #dda0dd;
+	text-decoration: none;
+	font-weight: bold;
+	padding: 5px;
+}
+
+a:active {
+	color: 	 #dda0dd;
+	background: #4b566a;
+	text-decoration: none;
+	font-weight: bold;
+	padding: 5px;
+}
