--- a/estilo.css
+++ b/estilo.css
@@ -2,13 +2,7 @@ body{
 	background: #d2d2c1 url('imagens/fundo.png');
 	font: 16px Arial, Helvetica, Sans-serif;
 }
-#principal{
-	width: 900px; 
-}
-#menu{
-	background: #c5c5b2;
-	padding: 18px;
-}
+
 a {
 	color: #4b566a;
 	text-decoration: none;
@@ -17,6 +11,14 @@ a {
 }
 
 a:hover {
+	color: 	 #dda0dd;
+	background: #4b566a;
+	text-decoration: none;
+	font-weight: bold;
+	padding: 5px;
+}
+
+a:active {
 	color: 	#4b566a;
 	background: #dda0dd;
 	text-decoration: none;
@@ -24,10 +26,18 @@ a:hover {
 	padding: 5px;
 }
 
-a:active {
-	color: 	 #dda0dd;
-	background: #4b566a;
-	text-decoration: none;
-	font-weight: bold;
-	padding: 5px;
+#principal{
+	width: 900px; 
+}
+#menu{
+	background: #c5c5b2;
+	padding: 18px;
+}
+
+#conteudo{
+	background: #e8e8d9;
+	padding: 10px;
+}
+.centralizar{
+	text-align: center;
 }
