Adicionada página Biografia ao projeto.

--- a/estilo.css
+++ b/estilo.css
@@ -26,6 +26,10 @@ a:active {
 	padding: 5px;
 }
 
+h1{
+	color: #828271;
+	font-size: 1.2em;
+}
 #principal{
 	width: 900px; 
 }
@@ -38,6 +42,10 @@ a:active {
 	background: #e8e8d9;
 	padding: 10px;
 }
-.centralizar{
+#rodape{
 	text-align: center;
+}
+
+.img-campanha{
+	border: 10px solid #c3c3ae;
 }
